WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69798
Touch events should take page scale into account
https://bugs.webkit.org/show_bug.cgi?id=69798
Summary
Touch events should take page scale into account
John Knottenbelt
Reported
2011-10-10 16:04:20 PDT
Event coordinates are in CSS pixels, so they should take the page scaling into account when converting from PlatformTouchEvent coordinates (which is in screen pixels).
Attachments
Patch
(6.55 KB, patch)
2011-10-10 16:07 PDT
,
John Knottenbelt
no flags
Details
Formatted Diff
Diff
Patch
(7.84 KB, patch)
2011-10-17 13:44 PDT
,
John Knottenbelt
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Knottenbelt
Comment 1
2011-10-10 16:07:52 PDT
Created
attachment 110429
[details]
Patch
Hajime Morrita
Comment 2
2011-10-16 22:31:58 PDT
Comment on
attachment 110429
[details]
Patch Please include the expectation file of added test.
John Knottenbelt
Comment 3
2011-10-17 13:44:54 PDT
Created
attachment 111313
[details]
Patch
WebKit Review Bot
Comment 4
2011-10-17 13:47:12 PDT
Attachment 111313
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
John Knottenbelt
Comment 5
2011-10-17 13:50:45 PDT
Thanks for reviewing, Hajime. Expectations now included. I also changed the test to be more similar to the test it is derived from, bringing the coordinates of the gesture closer together so that they are recognised as a click (rather than say, a swipe).
John Knottenbelt
Comment 6
2011-10-19 16:06:55 PDT
The style bot had a wobbly on this day - there weren't any style problems detected by webkit-patch upload. I'd really appreciate it if someone could review. Thanks.
Fady Samuel
Comment 7
2011-10-19 16:31:27 PDT
(In reply to
comment #6
)
> The style bot had a wobbly on this day - there weren't any style problems detected by webkit-patch upload. > > I'd really appreciate it if someone could review. > > Thanks.
I spoke to John, I am able to repo the bug locally on
http://www-cs-students.stanford.edu/~eparker/files/maps/visualize_touch_events.html
. This looks like a good fix, IMHO. Simon, could you please take a look at this? Thanks.
Adam Barth
Comment 8
2011-10-19 18:54:07 PDT
Comment on
attachment 111313
[details]
Patch Looks reasonable.
WebKit Review Bot
Comment 9
2011-10-20 09:49:04 PDT
Comment on
attachment 111313
[details]
Patch Clearing flags on attachment: 111313 Committed
r97988
: <
http://trac.webkit.org/changeset/97988
>
WebKit Review Bot
Comment 10
2011-10-20 09:49:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug