Touch events should take page scale into account https://bugs.webkit.org/show_bug.cgi?id=69798

Reviewed by Adam Barth.

Source/WebCore:

Test: fast/events/touch/page-scaled-touch-gesture-click.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleTouchEvent):

LayoutTests:

* fast/events/touch/page-scaled-touch-gesture-click-expected.txt: Added.
* fast/events/touch/page-scaled-touch-gesture-click.html: Added.


Canonical link: https://commits.webkit.org/86703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97988 268f45cc-cd09-0410-ab3c-d52691b4dbfc